--- a/quest-api/src/main/resources/application.yaml
+++ b/quest-api/src/main/resources/application.yaml
@@ -26,3 +26,11 @@ questapi:
         - "OPTIONS"
     allowed-headers:
         - "*"
+  mqtt:
+    broker-url: tcp://mqtt-broker:1883
+    client-id: quiz-service
+    default-topic: quiz/events
+    qos: 1
+    clean-session: true
+    topics:
+      - quiz/#
