--- a/quest-ui/package.json
+++ b/quest-ui/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
     "@mui/base": "^5.0.0-beta.69",
+    "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "@reduxjs/toolkit": "^2.5.1",
     "@types/js-cookie": "^3.0.6",
@@ -26,6 +27,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5",
     "redux-persist": "^6.0.0",
     "zod": "^3.24.1"
   },
