--- a/quest-api/pom.xml
+++ b/quest-api/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <apache.tike.version>3.1.0</apache.tike.version>
         <google.cloud.version>2.48.1</google.cloud.version>
+        <springdoc.version>2.8.4</springdoc.version>
     </properties>
     <dependencies>
         <dependency>
@@ -86,6 +87,11 @@
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
             <version>${apache.tike.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
 
     </dependencies>
