--- a/quest-api/src/main/resources/application.yaml
+++ b/quest-api/src/main/resources/application.yaml
@@ -11,19 +11,17 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        jdbc:
-          batch_size: 10
-        order_inserts: true
-        order_updates: true
-        batch_versioned_data: true
-        use_streams_for_binary: true
   servlet:
     multipart:
       enabled: true
       file-size-threshold: 1MB
       max-file-size: 5MB
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui
 
 questapi:
   security:
