feat: email confirmation, restore password, docker

--- a/be-infra/docker-compose.yml
+++ b/be-infra/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:latest
@@ -19,3 +17,30 @@ services:
       - "1883:1883"
     volumes:
       - ./mosquitto/config:/mosquitto/config
+
+  smtp:
+    image: mailhog/mailhog
+    container_name: smtp
+    restart: always
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+
+
+  questapi-app:
+    build:
+      context: ../quest-api
+      dockerfile: Dockerfile
+    container_name: questapi-app
+    depends_on:
+      - postgres
+      - mqtt-broker
+      - smtp
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/database
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: admin
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      QUESTAPI_MQTT_BROKER_URL: tcp://mqtt-broker:1883
+    ports:
+      - "8080:8080"
