--- a/quest-api/Dockerfile
+++ b/quest-api/Dockerfile
@@ -1,6 +1,20 @@
-FROM openjdk:23-jdk-slim
+FROM eclipse-temurin:21-jdk-alpine AS base
+
+ENV GOOGLE_APPLICATION_CREDENTIALS=.google/google-auth.json
+
 WORKDIR /app
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
+ADD ${GOOGLE_APPLICATION_CREDENTIALS} ${GOOGLE_APPLICATION_CREDENTIALS}
+COPY pom.xml pom.xml
+COPY src src
+
+FROM base AS build
+RUN apk add --no-cache maven \
+    && mvn clean package -DskipTests
+
+FROM eclipse-temurin:21-jre-alpine
+
+COPY --from=build /app/target/*.jar quest-api.jar
+COPY --from=build /app/${GOOGLE_APPLICATION_CREDENTIALS} ${GOOGLE_APPLICATION_CREDENTIALS}
+
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Dspring.main.banner-mode=off", "-jar", "/quest-api.jar"]
