--- a/quest-api/src/main/resources/application.yaml
+++ b/quest-api/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: "no.reply.questapi@gmail.com"
-    password: "osdh elkt pipw dvyy"
+    password: ""
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
