--- a/quest-ui/tsconfig.json
+++ b/quest-ui/tsconfig.json
@@ -19,6 +19,7 @@
     "paths": {
       "@*": ["src/*"],
       "@api/*": ["src/api/*"],
+      "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"],
       "@constants/*": ["src/constants/*"],
       "@layout/*": ["src/layout/*"],
