--- a/quest-ui/package.json
+++ b/quest-ui/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
     "zod": "^3.24.1"
   },
