--- a/quest-ui/tsconfig.json
+++ b/quest-ui/tsconfig.json
@@ -26,7 +26,8 @@
       "@modules/*": ["src/modules/*"],
       "@theme/*": ["src/theme/*"],
       "@store/*": ["src/store/*"],
-      "@types/*": ["src/types/*"]
+      "@types/*": ["src/types/*"],
+      "@hooks/*": ["src/hooks/*"]
     }
   },
   "include": ["vite.config.ts", "src"]
