--- a/quest-ui/package.json
+++ b/quest-ui/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "react-window": "^1.8.8"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.6",
